--- a/gleam.toml
+++ b/gleam.toml
@@ -14,6 +14,8 @@ version = "0.1.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
+gleam_erlang = "~> 0.25"
+gleam_otp = "~> 0.10"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
