--- a/gleam.toml
+++ b/gleam.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Singleton OTP actor registry for Gleam"
 licences = ["Apache-2.0"]
 repository = { type = "github", user = "jhillyerd", repo = "singularity" }
+gleam = ">= 0.32.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
