--- a/examples/supervised_mist/gleam.toml
+++ b/examples/supervised_mist/gleam.toml
@@ -1,13 +1,13 @@
 name = "supervised_mist"
 version = "1.0.0"
-gleam = ">= 0.32.0"
+gleam = ">= 1.1.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
 gleam_otp = "~> 0.10"
 gleam_erlang = "~> 0.25"
 gleam_http = "~> 3.6"
-mist = "~> 2.0"
+mist = ">= 3.0.0 and < 4.0.0"
 singularity = { path = "../.." }
 
 [dev-dependencies]
