--- a/gleam.toml
+++ b/gleam.toml
@@ -7,7 +7,7 @@ repository = { type = "github", user = "jhillyerd", repo = "singularity" }
 gleam = ">= 1.4.0"
 
 [dependencies]
-gleam_stdlib = "~> 0.34 or ~> 1.0"
+gleam_stdlib = ">= 0.34.0 and < 0.57.0"
 gleam_erlang = "~> 0.25"
 gleam_otp = "~> 0.10"
 
