--- a/gleam.toml
+++ b/gleam.toml
@@ -10,6 +10,7 @@ gleam = ">= 1.11.0"
 gleam_stdlib = ">= 0.58.0 and < 0.61.0"
 gleam_erlang = ">= 1.2.0 and < 2.0.0"
 gleam_otp = "== 1.0.0"
+gleam_time = ">= 1.4.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
